kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Enable HTTP to HTTPS redirect
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - reliancecloud.online
    secretName: reliancecloud-tls
  rules:
  - host: reliancecloud.online
    http:
      paths:
        - path: /  # This will match "/"
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 5000
                
        - path: /auth  # This will match "/auth" and "/auth/anything"
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 8001
        - path: /notes  # This will match "/notes" and "/notes/anything"
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 5000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 8000
